--- a/index.html
+++ b/index.html
@@ -3,11 +3,12 @@
   <head>
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <title>Miam-miam Memory</title>
     <link rel="stylesheet" href="style.css" />
   </head>
   <body>
     <div class="wrapper">
+      <H3 class="game-title">Miam-Miam Memory Game</H3>
       <div class="stats-container">
         <div id="moves-count"></div>
         <div id="time"></div>
